--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "@nitm/js-api-client-base",
-  "version": "0.3.9",
-  "description": "Javascript API client base. Use this to develop services for react, vue or others using axios",
-  "main": "src/index.js",
-  "scripts": {
-    "lint": "jshint --exclude=src/*.min.js src/**/*.js test/*.js",
-    "test": "mocha --require @babel/register --exit",
-    "build": "npm run build:version",
-    "build:version": "cross-env replace -s 'VERSION = \"[^\"]+\"' \"VERSION = \\\"$npm_package_version\\\"\" src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitlab.com/nitm/js-api-client-base.git"
-  },
-  "author": "Malcolm Paul <malcolm@ninjasitm.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://gitlab.com/nitm/js-api-client-base/issues"
-  },
-  "homepage": "https://gitlab.com/nitm/js-api-client-base#readme",
-  "files": [
-    "/src",
-    "CHANGELOG",
-    "README"
-  ],
-  "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/node": "^7.6.3",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/register": "^7.6.2",
-    "chai": "^4.2.0",
-    "cross-env": "^5.2.1",
-    "jshint": "^2.9.6",
-    "mocha": "^6.2.2",
-    "node-qunit-phantomjs": "^2.1.0",
-    "nodemon": "^1.19.4",
-    "replace": "^1.1.1",
-    "rimraf": "^2.7.1",
-    "uglify-js": "^3.6.4"
-  },
-  "dependencies": {
-    "axios": "^0.19.0",
-    "js-logger": "^1.6.0"
-  }
+	"name": "@nitm/js-api-client-base",
+	"version": "0.3.10",
+	"description": "Javascript API client base. Use this to develop services for react, vue or others using axios",
+	"main": "src/index.js",
+	"scripts": {
+		"lint": "jshint src/**/*.js test/*.js",
+		"test": "mocha --require @babel/register --exit",
+		"build": "npm run build:version",
+		"build:version": "cross-env replace -s 'VERSION = \"[^\"]+\"' \"VERSION = \\\"$npm_package_version\\\"\" src/index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://gitlab.com/nitm/js-api-client-base.git"
+	},
+	"author": "Malcolm Paul <malcolm@ninjasitm.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://gitlab.com/nitm/js-api-client-base/issues"
+	},
+	"homepage": "https://gitlab.com/nitm/js-api-client-base#readme",
+	"files": [
+		"/src",
+		"CHANGELOG",
+		"README"
+	],
+	"devDependencies": {
+		"@babel/cli": "^7.6.4",
+		"@babel/core": "^7.6.4",
+		"@babel/node": "^7.6.3",
+		"@babel/plugin-proposal-export-default-from": "^7.5.2",
+		"@babel/plugin-proposal-export-namespace-from": "^7.5.2",
+		"@babel/preset-env": "^7.6.3",
+		"@babel/register": "^7.6.2",
+		"chai": "^4.2.0",
+		"cross-env": "^5.2.1",
+		"jshint": "^2.9.6",
+		"mocha": "^6.2.2",
+		"node-qunit-phantomjs": "^2.1.0",
+		"nodemon": "^1.19.4",
+		"replace": "^1.1.1",
+		"rimraf": "^2.7.1",
+		"uglify-js": "^3.6.4"
+	},
+	"dependencies": {
+		"axios": "^0.19.0",
+		"js-logger": "^1.6.0"
+	}
 }
