Pre  commit lint

--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
 		"js-logger": "^1.6.0"
 	},
 	"gitHooks": {
-		"pre-commit": "npm run lint && npm run build && git add ."
+		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
 		"*.{js,jsx,vue,ts,tsx}": [
-			"vue-cli-service lint",
+			"npm run build",
 			"git add"
 		]
 	}
