--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"chai": "^4.2.0",
 		"cross-env": "^5.2.1",
 		"jshint": "^2.9.6",
+		"lint-staged": "^9.5.0",
 		"mocha": "^6.2.2",
 		"node-qunit-phantomjs": "^2.1.0",
 		"nodemon": "^1.19.4",
